--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,9 @@ before_install:
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
 - sudo apt-get -qq -y install nginx zip  --force-yes  
-# Install latest node.js
-- sudo apt-get remove -qq -y nodejs
-- curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-- sudo apt-get install -qq -y nodejs
-- nvm install node
+- select nodejs version
+- nvm install 6
+- nvm use 6
 - source ~/.bashrc
 - npm install npm -g
 # Tools
