--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fermiumlabs/website#readme",
   "dependencies": {
+    "angular-morris-chart": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.0.1",
@@ -37,9 +38,11 @@
     "gulp-sass": "^3.0.0",
     "gulp-shell": "^0.6.3",
     "gulp-uglify": "^2.0.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-webserver": "^0.9.1",
+    "imagemin-pngquant": "^5.0.0",
     "path": "^0.12.7",
-    "phantomjs-prebuilt": "^2.1.16",
-    "pump": "^1.0.1"
+    "pump": "^1.0.1",
+    "uncss": "^0.14.1"
   }
 }
